Fix error display div being hidden by z-index

--- a/webapp/styles/components/error_display.scss
+++ b/webapp/styles/components/error_display.scss
@@ -1,6 +1,6 @@
 @use "../abstracts/colours";
 
-.error-message {
+#error-message {
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -11,6 +11,7 @@
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   opacity: 0;
   visibility: hidden;
+  z-index: 100;
   transition: opacity 0.5s, visibility 0.5s;
 
   &.fade-in {
